--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "socket-chat-example",
+  "name": "Node JS App settings",
   "version": "1.0.0",
-  "description": "my first socket.io app",
+  "description": "Node JS First App",
   "dependencies": { }
 }
